# mikrotik-firewall

./: .gitignore  Cargo.toml
resources/bad_policies_1/: firewall.conf
resources/dup_zones_1/: firewall.conf
resources/dup_zones_2/: filter  firewall.conf
resources/load_fw_1/: filter  firewall.conf
src/: main.rs
src/firewall/: actions.rs  chains.rs  config_files.rs  firewalls.rs  loader.rs  macros.jinja  mod.rs  optimizer.rs  parser.pest  parser.rs  policies.rs  rules.rs  saver.rs  structures.rs  tables.rs  templates.rs  testing.rs  utils.rs  zones.rs
